Revision history for App-cpanminus-reporter

0.17 2016-04-24
    BUG FIXES:
        - fixed support for extended paths on Windows
          (thanks Mithaldu and Sinan Unur)

0.16 2016-04-24
    NEW FEATURES:
        - exposes extra environment variables
    OTHER:
        - bumping up CTCC dependency
        - minor refactoring

0.15 2016-04-24
    BUG FIXES:
        - updated dependencies

0.14 2016-04-23
    NEW FEATURES:
        - support for cpanm --installdeps .
        - local installations are just skipped now, instead of aborting the
          entire thing.
    BUG FIXES:
        - improving the parser so it handles UNKNOWN/NA outputs properly
          (distributions with no tests, etc).
        - support for explicit NOTESTS results.
        - reports are skipped when current/tested
          perl versions mismatch (Michael LaGrasta)
        - added minimal perl version (Michael LaGrasta)
    OTHER:
        - improved some error messages with likely diagnostics.
        - significantly increased test coverage.

0.13  2015-04-19
    NEW FEATURES:
      - now cpanm-reporter understands the history file from other
        CPAN Testers' clients! It should work seamlessly, and you
        can disable it by passing the '--skip-history' (GARU)

0.12  2015-01-05
    NEW FEATURES:
      - new "--dry-run" option (PLICEASE)

    BUG FIXES:
      - supporting HTTPS (PLICEASE)

0.11  2014-06-24
    BUG FIXES:
      - Github #11 - Proper handling of vstrings on parser log (KENTNL)
      - Ignoring modules from the LOCAL user (PLICEASE)
      - Ignoring modules from the 'Local::' namespace (ETHER)
      - Avoid 'deep recursion' warning

    OTHER:
      - several more tests written.
      - documenting PERL_MM_USE_DEFAULT behaviour on prompts.

0.10  2013-07-16
    NEW FEATURES:
      - new command line option, 'only' to enable just one
        dist, or a group of comma-separated dists, for reporting (BBUSS)