@@ -1,5 +1,9 @@
 Revision history for App-cpanminus-reporter
 
+    OTHER:
+      - reduced prereq tree by switching from File::HomeDir to
+        File::HomeDir::Tiny.
+
 0.17 2016-04-24
     BUG FIXES:
         - fixed support for extended paths on Windows
